@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3552 2022/01/13 19:14:05 wiz Exp $
+# $NetBSD: Makefile,v 1.3553 2022/01/14 09:32:42 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -2293,7 +2293,6 @@ SUBDIR+=	py-entrypoints
 SUBDIR+=	py-enum34
 SUBDIR+=	py-exam
 SUBDIR+=	py-execnet
-SUBDIR+=	py-expressions
 SUBDIR+=	py-extension-helpers
 SUBDIR+=	py-extras
 SUBDIR+=	py-extratools
@@ -2346,7 +2345,6 @@ SUBDIR+=	py-google-api-core
 SUBDIR+=	py-google-apputils
 SUBDIR+=	py-google-i18n-address
 SUBDIR+=	py-googleapis-common-protos
-SUBDIR+=	py-grako
 SUBDIR+=	py-greenlet
 SUBDIR+=	py-guppy3
 SUBDIR+=	py-h5py
