@@ -1,18 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2017/06/01 12:05:09 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/expressions/__init__.py
-${PYSITELIB}/expressions/__init__.pyc
-${PYSITELIB}/expressions/__init__.pyo
-${PYSITELIB}/expressions/compat.py
-${PYSITELIB}/expressions/compat.pyc
-${PYSITELIB}/expressions/compat.pyo
-${PYSITELIB}/expressions/compiler.py
-${PYSITELIB}/expressions/compiler.pyc
-${PYSITELIB}/expressions/compiler.pyo
-${PYSITELIB}/expressions/grammar.py
-${PYSITELIB}/expressions/grammar.pyc
-${PYSITELIB}/expressions/grammar.pyo
