@@ -1,1 +1,0 @@
-bin/slicer @PREFIX@/bin/slicer@PYVERSSUFFIX@
