@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:18:31 nia Exp $
-
-BLAKE2s (grako-3.99.9.zip) = f4c229ced564e728f5f0d738499891ee69ee9dc37c59fc1b6027aaf3d3ee818e
-SHA512 (grako-3.99.9.zip) = 1251a669cafc37021405f63005eab974fc1d9acab04f14ef16132411c1c36e540a3a092ae58a6ca5c3f46d3e040d2402cb287cc1fc56aa422eb5200555f29a74
-Size (grako-3.99.9.zip) = 159278 bytes
